--- a/css/style.css
+++ b/css/style.css
@@ -7,9 +7,11 @@ h1{
 }
 h2{
     color: #14E1FC;
+    font-family: "Expletus Sans","Arima Madurai","Spectral","Georgia",sans-serif;
 }
 h3{
     color:mintcream;
+    font-family: "Expletus Sans","Arima Madurai","Spectral","Georgia",sans-serif;
 }
 h4{
     color: #14E1FC;
@@ -17,6 +19,11 @@ h4{
 }
 h5{
     color:mintcream;
+    font-family: "Kanit","K2D","Epilogue","Cambria",sans-serif;
+}
+p{
+    color:mintcream;
+    font-family: "Kanit","K2D","Epilogue","Cambria",sans-serif;
 }
 ul{
     list-style: none;
@@ -70,7 +77,7 @@ ul{
 }
 
 .card{
-    background-color: lightslategray;
+    background-color: rebeccapurple;
     text-align: justify;
     margin-left: 2%;
     padding-left:2%;
