--- a/css/style.css
+++ b/css/style.css
@@ -1,40 +1,46 @@
 /*Portfolio Style Sheet*/
 
 /*Style Tyle universal styling only*/
+/*pre-vh/w scaling, font-sizes in order: 28,26,24,24,20,18,18*/
 h1{
     color:mintcream;
     font-family: "Expletus Sans","Arima Madurai","Spectral","Georgia",sans-serif;
-    font-size: 28px;
+    font-size: 24px;
 }
 h2{
     color: #14E1FC;
     font-family: "Expletus Sans","Arima Madurai","Spectral","Georgia",sans-serif;
-    font-size: 26px;
+    font-size: 22px;
 }
 h3{
     color:mintcream;
     font-family: "Expletus Sans","Arima Madurai","Spectral","Georgia",sans-serif;
-    font-size: 24px;
+    font-size: 20px;
 }
 h4{
     color: #14E1FC;
     font-family: "Kanit","K2D","Epilogue","Cambria",sans-serif;
-    font-size: 24px;
+    font-size: 20px;
 }
 h5{
     color:mintcream;
     font-family: "Kanit","K2D","Epilogue","Cambria",sans-serif;
-    font-size: 20px;
+    font-size: 16px;
 }
 p{
     color:mintcream;
     font-family: "Kanit","K2D","Epilogue","Cambria",sans-serif;
-    font-size: 18px;
+    font-size: 14px;
 }
+pre{
+    color:mintcream;
+    font-family: "Kanit","K2D","Epilogue","Cambria",sans-serif;
+    font-size: 14px;
+}/*<pre>tag preserves spacing and formatting, but doesnt seem to help popping*/
 ul{
     list-style: none;
     display: flex;
-    margin:1%;
+    /*margin:1%;
    /*background-color: olive;*/
 }
 
@@ -50,19 +56,22 @@ ul{
 
     display: grid;
     /*grid-template-rows:     8.33%       16.67%          66.67%      8.33%   ;*/
-    grid-template-rows:     .25fr        2fr             8fr         .75fr     ;
+    /*grid-template-rows:     .25fr        2fr             8fr         .75fr     ;*/
+    grid-template-rows:     5vh         15vh            70vh        10vh    ;
     grid-template-areas:    "topNav"    "bannerQuote"   "bodyMain"  "botNav";
 }
 
 #topNav{
     width:100%;
-    height: 60px;
+    /*height: 60px;*/
+    height: 5vh;
     position:fixed;
     z-index: 10;
 
     grid-area: topNav;
     display: grid;
-    grid-template-columns:  1fr     4fr     3fr             5fr;
+    /*grid-template-columns:1fr     4fr     3fr             5fr;*/
+    grid-template-columns:  20vw    20vw    30vw            15vw;
     grid-template-areas:    "logo   name    nullCenterTop   navButton";
 }
 
@@ -75,9 +84,11 @@ ul{
 
 
 .list-format{
-    width: 100px;
+    /*width: 100px;
     margin-top: -20px;
-    transform: translate(10%,0px);
+    transform: translate(10%,0px);*/
+    margin-right: 4vw;
+    margin-top: -4vh;
 }
 /*.list-format:hover{
     text-shadow: 0px 4px 12px #0a8dca;
@@ -124,7 +135,8 @@ ul{
 
 /*topNav grid area declarations*/
 #logo{
-    width:20%;
+    /*width:20%;*/
+    width: 5vw;
     margin:2%;
     float: left;
     margin-right: 10%;
@@ -148,7 +160,8 @@ ul{
 
 }
 #name{
-    width: 300px;
+    /*width: 300px;*/
+    width: 20vw;
     margin: 5%;
     
     grid-area: name;
@@ -167,11 +180,11 @@ ul{
 #bannerQuote{
     grid-area: bannerQuote;
     text-align: center;
-    padding-top: 2%;
+    /*padding-top: 2%;*/
 }
 
 #hQuote{
-    padding-bottom: 0px auto;
+    /*padding-bottom: 0px auto;*/
     cursor:pointer;
 }
 #hQuote:hover{
@@ -179,7 +192,7 @@ ul{
     transition: 0.2s;
 }
 #hAuthor{
-    margin-top: 0px auto;
+    margin-top: -2vh;
 }
 /*all things bannerQuote^^^^^^^^^^^^^^^^^^^^*/
 
@@ -195,16 +208,18 @@ ul{
     
     display: grid;
     grid-area: bodyMain;
-    grid-column-gap: 0.5%;
-    grid-row-gap:    0.5%;
+    /*grid-column-gap: 0.5%;
+    grid-row-gap:    0.5%;*/
 
     /*grid-template-columns:  1fr         4fr             1fr         5fr         1fr       ;*//*pre-feedback*/
-    grid-template-columns:  .5fr         5.5fr             .5fr         5fr         .5fr       ;
+    /*grid-template-columns:  .5fr         5.5fr             .5fr         5fr         .5fr       ;*/
+    grid-template-columns:  1vw         50vw            4vw        40vw        1vw       ;
     grid-template-areas:    "nullLeft   detailColumn    nullCenter  heroSpace   nullRight";
 }
 
 .bodyColumn{
-    margin: 0px;
+    /*margin: 0px;*/
+    margin: 1vw;
     display: grid;
 }
 
@@ -224,8 +239,14 @@ ul{
 
     /*grid-template-columns:  2fr 1fr 2fr;
     grid-template-rows:     3fr .5fr 2fr;*/
-    grid-template-columns:  40% 20% 40%;
-    grid-template-rows:     50% 10% 40%;
+
+    /*grid-template-columns:  40% 20% 40%;
+    grid-template-rows:     50% 10% 40%;*/
+
+    /*grid-template-columns: 20vw 5vw 20vw;
+    grid-template-rows: 32vh 5vh 5vh;*/
+    grid-template-columns: 18vw 4vw 18vw;
+    grid-template-rows: 40vh 5vh 20vh;
     grid-template-areas:
         "heroPic heroPic heroPic"
         "heroText heroText heroText"
@@ -241,15 +262,18 @@ ul{
 .card{
     background-color: rebeccapurple;
     text-align: justify;
-    height: 200px;
+    /*height: 200px;*/
+    height: 20vh;
     border-radius: 2%;
 
     padding-left:2%;
     padding-right:2%;
 
     display: grid;
-    grid-template-columns: 65% 35%;
-    grid-template-rows: 20% 80%;
+    /*grid-template-columns: 65% 35%;
+    grid-template-rows: 20% 80%;*/
+    grid-template-columns: 30vw 10vw;
+    grid-template-rows: 5vh 20vh;
     grid-template-areas:    "cardTitle cardPic"
                             "cardDetails cardPic";
     grid-column-gap: 4%;
@@ -263,22 +287,156 @@ ul{
 .cardTitle{
     grid-area: cardTitle;
     margin-bottom: 1px;
-    height:30px;
+    height:3vh;
     overflow: hidden;
 }
 .cardDetails{
     grid-area: cardDetails;
-    margin-top: 10%;
-    overflow:hidden;
+    /*margin-top: 10%;*/
+    margin-top: 1vh;
+    overflow: hidden;
 }
 .cardPic{
-    width: 80%;
-    margin:2%;
+    /*width: 80%;*/
+    height: 18vh;
+    max-width: 15vw;
+    /*margin:2%;*/
+    margin:.05vh;
     text-align: center;
     grid-area: cardPic;
 
     border-radius: 4%;
 }
+
+
+/*heroSpace declarations*/
+#heroPic{
+    /*width:800px;
+    height:450px;*/
+    height: 40vh;
+    max-width: 40vw;
+
+    /*this chunk is all border control*/
+    border-radius: 4%;
+    border-style:ridge;
+    border-color: #4d0463;
+    border-bottom-width: thick;
+    border-top-width: thick;
+    border-right: 0px;
+    border-left: 0px; 
+
+    grid-area: heroPic;
+    /*position:fixed; /*for when we have multiple case studies to scroll /mobile*/
+    transform: translate(9vw,0px); /*manual alignments!*/
+    z-index: -1; /*somewhere along border creation, heroPic started trumping topNav*/
+}
+#heroPic:hover{
+    box-shadow: 0px 4px 12px 2px rgba(20, 225, 252, 0.4);
+    transition: 0.2s;
+}
+#heroRef{
+    /*for js targeting*/
+}
+
+#heroText{
+    grid-area: heroText;
+    /*z-index: 0;*//*puts it above the image*/
+    margin-top: 1vh;
+}
+
+#heroStatLeft{
+    grid-area: heroStatLeft;
+    margin: 4%;
+
+    /*position: absolute; /*does stop popping...*/
+}
+#heroStatGap{
+    grid-area: heroStatGap;
+}
+#heroStatRight{
+    grid-area: heroStatRight;
+    margin: 4%;
+
+    /*position: absolute; /*does stop popping...*/
+}
+#iconLeft{
+    /*for js targeting*/
+}
+#statNumLeft{
+    margin-top: 12vh;
+}
+#statTextLeft{
+    margin-top: -4vh;
+}
+#iconRight{
+    /*for js targeting*/
+}
+#statNumRight{
+    margin-top: 12vh;
+}
+#statTextRight{
+    margin-top: -4vh;
+}
+
+.statIcon{
+    width: 60px;
+    position: absolute;
+    transform:translate(-30px,0px);
+
+    transition-property: all;
+    transition-duration: 0.15s;
+    transition-timing-function: ease-out;
+}
+
+.statIcon:hover{
+    width: 80px;
+    transform: translate(-40px,-20px);
+}
+/*heroSpace declarations^^^^^^^^^^^^^^^^^^^^^^^^^^*/
+
+#botNav{
+    text-align: right;
+    grid-area: botNav;
+    align-items: end;
+}
+
+.socialIcon{
+    width: 42px;
+    margin: 2%;
+    position: absolute;
+    transform: translate(-180px,-10px);
+    
+    transition-property: all;
+    transition-duration: 0.15s;
+    transition-timing-function: ease-out;
+    transition-delay: 0.1s;
+}
+.socialIcon:hover{
+    width: 60px;
+    transform: translate(-187px,-17px);
+}
+/*need a specific override to parse absolute positions*/
+#socialRes{
+    transform: translate(-275px,-20px);
+    width: 65px;
+}
+#socialRes:hover{
+    transform: translate(-282px,-27px);
+    width: 80px;
+}
+#socialLink{
+    /*for js targeting*/
+}
+#socialLink:hover{
+    /*for js targeting*/
+}
+#socialFaz{
+    transform: translate(-100px,-10px);
+}
+#socialFaz:hover{
+    transform: translate(-107px,-17px);
+}
+
 
 #about-lead{
     /*for js targeting*/
@@ -358,128 +516,8 @@ ul{
 }
 /*card declarations^^^^^^^^^^^^^^^^^^^^^^^^^^*/
 
-/*heroSpace declarations*/
-#heroPic{
-    width:800px;
-    height:450px;
-    /*width: 250%;*/ /* >100 to span its div's 3 columns*/
-    border-radius: 4%;
-    border-style:ridge;
-    border-color: #4d0463;
-    border-bottom-width: thick;
-    border-top-width: thick;
-    border-right: 0px;
-    border-left: 0px; /*this chunk is all border control*/
-
-    grid-area: heroPic;
-    transform: translate(5%,0px); /*manual alignments!*/
-    z-index: -1; /*somewhere along border creation, heroPic started trumping topNav*/
-}
-#heroPic:hover{
-    box-shadow: 0px 4px 12px 2px rgba(20, 225, 252, 0.4);
-    transition: 0.2s;
-}
-#heroRef{
-    /*for js targeting*/
-}
-
-#heroText{
-    grid-area: heroText;
-    /*z-index: 0;*//*puts it above the image*/
-    margin-top: 62px;
-}
-
-#heroStatLeft{
-    grid-area: heroStatLeft;
-    margin: 4%;
-}
-#heroStatGap{
-    grid-area: heroStatGap;
-}
-#heroStatRight{
-    grid-area: heroStatRight;
-    margin: 4%;
-}
-#iconLeft{
-    /*for js targeting*/
-}
-#statNumLeft{
-    /*for js targeting*/
-}
-#statTextLeft{
-    /*for js targeting*/
-}
-#iconRight{
-    /*for js targeting*/
-}
-#statNumRight{
-    /*for js targeting*/
-}
-#statTextRight{
-    /*for js targeting*/
-}
-
-.statIcon{
-    width: 80px;
-    position: absolute;
-    transform:translate(-38px,0px);
-
-    transition-property: all;
-    transition-duration: 0.15s;
-    transition-timing-function: ease-out;
-}
-
-.statIcon:hover{
-    width: 100px;
-    transform: translate(-48px,-20px);
-}
-/*heroSpace declarations^^^^^^^^^^^^^^^^^^^^^^^^^^*/
-
-#botNav{
-    text-align: right;
-    grid-area: botNav;
-    align-items: end;
-}
-
-.socialIcon{
-    width: 42px;
-    margin: 2%;
-    position: absolute;
-    transform: translate(-180px,-10px);
-    
-    transition-property: all;
-    transition-duration: 0.15s;
-    transition-timing-function: ease-out;
-    transition-delay: 0.1s;
-}
-.socialIcon:hover{
-    width: 60px;
-    transform: translate(-187px,-17px);
-}
-/*need a specific override to parse absolute positions*/
-#socialRes{
-    transform: translate(-275px,-20px);
-    width: 65px;
-}
-#socialRes:hover{
-    transform: translate(-282px,-27px);
-    width: 80px;
-}
-#socialLink{
-    /*for js targeting*/
-}
-#socialLink:hover{
-    /*for js targeting*/
-}
-#socialFaz{
-    transform: translate(-100px,-10px);
-}
-#socialFaz:hover{
-    transform: translate(-107px,-17px);
-}
-
 /*Mobile*/
-@media all and (max-width: 1000px){
+@media all and (max-width: 500px){
     
     #bodyDisplay{
         grid-template-rows:     100px       125px            1600px      100px     ;
