--- a/css/style.css
+++ b/css/style.css
@@ -64,7 +64,7 @@ ul{
 #topNav{
     width:100%;
     /*height: 60px;*/
-    height: 5vh;
+    height: 8vh;
     position:fixed;
     z-index: 10;
 
@@ -136,7 +136,7 @@ ul{
 /*topNav grid area declarations*/
 #logo{
     /*width:20%;*/
-    width: 5vw;
+    width: 70px;
     margin:2%;
     float: left;
     margin-right: 10%;
@@ -163,6 +163,7 @@ ul{
     /*width: 300px;*/
     width: 20vw;
     margin: 5%;
+    margin-left: 20px;
     
     grid-area: name;
     transform: translate(60px,0px);
@@ -461,6 +462,12 @@ ul{
     /*for js targeting*/
 }
 #pic-DASNW{
+    /*for js targeting*/
+}
+#work-FridgeFA{
+    /*for js targeting*/
+}
+#pic-FridgeFA{
     /*for js targeting*/
 }
 #work-SPlant{
