--- a/css/style.css
+++ b/css/style.css
@@ -43,6 +43,9 @@ ul{
     /*margin:1%;
    /*background-color: olive;*/
 }
+a{
+    color: #14E1FC;
+}
 
 *{
     box-sizing: border-box;
@@ -136,10 +139,11 @@ ul{
 /*topNav grid area declarations*/
 #logo{
     /*width:20%;*/
-    width: 70px;
+    height: 8vh;
     margin:2%;
-    float: left;
+    margin-top: 3.5%;
     margin-right: 10%;
+    float: left;
     opacity: 100% !important; /*doesn't currently work*/
     border-radius: 4%;
     z-index: 8;
@@ -155,7 +159,8 @@ ul{
     transition-delay: 0.1s;
 }
 #logo:hover{
-    width: 89%;
+    /*width: 89%;*/
+    height: 20vh;
     /*transform: translate(-48px,-20px);*/
 
 }
